--- a/ex3.html
+++ b/ex3.html
@@ -5,7 +5,8 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>
+    <script src="ex3.js></script">
+    <link rel="stylesheet" href="ex3.css">
         $(document).ready(function () {
             $("button").click(function () {
                 $("#div1").fadeIn();
