--- a/ex4.html
+++ b/ex4.html
@@ -3,7 +3,8 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>
+    <scriptsrc="ex4.js></script">
+    <link rel="stylesheet" href="ex4.css">>
         $(document).ready(function () {
             $("#flip").click(function () {
                 $("#panel").slideDown("slow");
